# file_teleporter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INFO  LICENSE  README.md  build_exe.bat  build_exe_advanced.bat  config.json  file_teleporter.py  file_teleporter_improved.py  info.txt  install_windows.bat  pyproject.toml  requirements-dev.txt  run_file_teleporter.bat  setup_windows.bat
