[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-teleporter"
version = "0.1.0"
description = "Desktop GUI tool to teleport files and folders into predefined destinations using configurable tabs."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "khrehankashmiri", email = "khrehankashmiri@users.noreply.github.com" }
]
dependencies = [
  "PySide6>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/khrehankashmiri/file_teleporter"
Source = "https://github.com/khrehankashmiri/file_teleporter"
Issues = "https://github.com/khrehankashmiri/file_teleporter/issues"

[project.scripts]
file-teleporter = "file_teleporter:main"
